# Delegate

./: Delegate.sln  README.md
Delegate/: CMakeLists.txt  Delegate.vcxproj  delegate.h  main.cpp  type_name.h
